syntax = "proto3";
package eq.common;

option go_package = "knervous/eqgo/internal/api/proto/common";

enum OpCodes {
    OP_Unknown = 0;

    //////////////////////
    // Handled OP Codes //
    //////////////////////

    // JWT
    OP_JWTLogin = 10;
    OP_JWTResponse = 11;

    // Login
    OP_LoginAccepted = 12;
    OP_PlayEverquestRequest = 13;
    OP_PlayEverquestResponse = 14;
    OP_ServerListRequest = 15;
    OP_ServerListResponse = 16;

    // World
    OP_ApproveName = 17;
    OP_CharacterCreate = 18;
    OP_DeleteCharacter = 19;
    OP_ApproveName_Server = 20;
    OP_EnterWorld = 21;
    OP_ExpansionInfo = 22;
    OP_GuildsList = 23;
    OP_PostEnterWorld = 24;
    OP_SendCharInfo = 25;
    OP_SendLoginInfo = 26;
    OP_SendMaxCharacters = 27;
    OP_SendMembership = 28;
    OP_SendMembershipDetails = 29;
    OP_ZoneServerInfo = 30;
    OP_WebInitiateConnection = 31;

    // Zone
    OP_ZoneSession = 32;
    OP_ZoneSessionValid = 33;
    OP_ZoneEntry = 34;
    OP_SetServerFilter = 35;
    OP_SendAATable = 36;
    OP_SendTributes = 37;
    OP_SendGuildTributes = 38;
    OP_SendAAStats = 39;
    OP_ReqClientSpawn = 40;
    OP_ReqNewZone = 41;
    OP_SendExpZonein = 42;
    OP_ClientReady = 43;
    OP_ClientError = 44;
    OP_ApproveZone = 45;
    OP_TGB = 46;
    OP_AckPacket = 47;
    OP_ClientUpdate = 48;
    OP_AutoAttack = 49;
    OP_AutoAttack2 = 50;
    OP_Consent = 51;
    OP_ConsentDeny = 52;
    OP_TargetMouse = 53;
    OP_TargetCommand = 54;
    OP_Shielding = 55;
    OP_Jump = 56;
    OP_AdventureInfoRequest = 57;
    OP_AdventureRequest = 58;
    OP_LDoNButton = 59;
    OP_LeaveAdventure = 60;
    OP_Consume = 61;
    OP_AdventureMerchantRequest = 62;
    OP_AdventureMerchantPurchase = 63;
    OP_ConsiderCorpse = 64;
    OP_Consider = 65;
    OP_Begging = 66;
    OP_TestBuff = 67;
    OP_Surname = 68;
    OP_YellForHelp = 69;
    OP_Assist = 70;
    OP_GMTraining = 71;
    OP_GMEndTraining = 72;
    OP_GMTrainSkill = 73;
    OP_RequestDuel = 74;
    OP_DuelDecline = 75;
    OP_DuelAccept = 76;
    OP_SpawnAppearance = 77;
    OP_BazaarInspect = 78;
    OP_Death = 79;
    OP_MoveCoin = 80;
    OP_ItemLinkClick = 81;
    OP_MoveItem = 82;
    OP_Camp = 83;
    OP_Logout = 84;
    OP_SenseHeading = 85;
    OP_FeignDeath = 86;
    OP_Sneak = 87;
    OP_Hide = 88;
    OP_ChannelMessage = 89;
    OP_WearChange = 90;
    OP_DeleteSpawn = 91;
    OP_SaveOnZoneReq = 92;
    OP_Save = 93;
    OP_WhoAllRequest = 94;
    OP_GMZoneRequest = 95;
    OP_GMZoneRequest2 = 96;
    OP_EndLootRequest = 97;
    OP_LootRequest = 98;
    OP_Dye = 99;
    OP_ConfirmDelete = 100;
    OP_LootItem = 101;
    OP_GuildDelete = 102;
    OP_GuildPublicNote = 103;
    OP_GetGuildsList = 104;
    OP_SetGuildMOTD = 105;
    OP_SetRunMode = 106;
    OP_GuildPeace = 107;
    OP_GuildWar = 108;
    OP_GuildLeader = 109;
    OP_GuildDemote = 110;
    OP_GuildInvite = 111;
    OP_GuildRemove = 112;
    OP_GuildInviteAccept = 113;
    OP_ManaChange = 114;
    OP_MemorizeSpell = 115;
    OP_SwapSpell = 116;
    OP_CastSpell = 117;
    OP_DeleteItem = 118;
    OP_CombatAbility = 119;
    OP_Taunt = 120;
    OP_InstillDoubt = 121;
    OP_RezzAnswer = 122;
    OP_GMSummon = 123;
    OP_TradeBusy = 124;
    OP_TradeRequest = 125;
    OP_TradeRequestAck = 126;
    OP_CancelTrade = 127;
    OP_TradeAcceptClick = 128;
    OP_BoardBoat = 129;
    OP_LeaveBoat = 130;
    OP_RandomReq = 131;
    OP_Buff = 132;
    OP_GMHideMe = 133;
    OP_GMNameChange = 134;
    OP_GMKill = 135;
    OP_GMLastName = 136;
    OP_GMToggle = 137;
    OP_LFGCommand = 138;
    OP_GMGoto = 139;
    OP_TraderShop = 140;
    OP_ShopRequest = 141;
    OP_Bazaar = 142;
    OP_ShopPlayerBuy = 143;
    OP_ShopPlayerSell = 144;
    OP_ShopEnd = 145;
    OP_CloseContainer = 146;
    OP_ClickObjectAction = 147;
    OP_ClickObject = 148;
    OP_RecipesFavorite = 149;
    OP_RecipesSearch = 150;
    OP_RecipeDetails = 151;
    OP_RecipeAutoCombine = 152;
    OP_TradeSkillCombine = 153;
    OP_ItemName = 154;
    OP_AugmentItem = 155;
    OP_ClickDoor = 156;
    OP_FaceChange = 157;
    OP_GroupInvite = 158;
    OP_GroupInvite2 = 159;
    OP_GroupFollow = 160;
    OP_GroupFollow2 = 161;
    OP_GroupAcknowledge = 162;
    OP_GroupCancelInvite = 163;
    OP_GroupDisband = 164;
    OP_GroupDelete = 165;
    OP_GMEmoteZone = 166;
    OP_InspectRequest = 167;
    OP_InspectAnswer = 168;
    OP_DeleteSpell = 169;
    OP_PetitionBug = 170;
    OP_Bug = 171;
    OP_Petition = 172;
    OP_PetitionCheckIn = 173;
    OP_PetitionResolve = 174;
    OP_PetitionDelete = 175;
    OP_PetitionUnCheckout = 176;
    OP_PetitionQue = 177;
    OP_PDeletePetition = 178;
    OP_PetitionCheckout = 179;
    OP_PetitionRefresh = 180;
    OP_PetCommands = 181;
    OP_ReadBook = 182;
    OP_Emote = 183;
    OP_GMDelCorpse = 184;
    OP_GMKick = 185;
    OP_GMServers = 186;
    OP_Illusion = 187;
    OP_GMBecomeNPC = 188;
    OP_Fishing = 189;
    OP_Forage = 190;
    OP_Mend = 191;
    OP_EnvDamage = 192;
    OP_Damage = 193;
    OP_AAAction = 194;
    OP_TraderBuy = 195;
    OP_Trader = 196;
    OP_GMFind = 197;
    OP_PickPocket = 198;
    OP_Bind_Wound = 199;
    OP_TrackTarget = 200;
    OP_Track = 201;
    OP_TrackUnknown = 202;
    OP_ReloadUI = 203;
    OP_Split = 204;
    OP_SenseTraps = 205;
    OP_DisarmTraps = 206;
    OP_OpenTributeMaster = 207;
    OP_OpenGuildTributeMaster = 208;
    OP_TributeItem = 209;
    OP_TributeMoney = 210;
    OP_SelectTribute = 211;
    OP_TributeUpdate = 212;
    OP_TributeToggle = 213;
    OP_TributeNPC = 214;
    OP_CrashDump = 215;
    OP_ControlBoat = 216;
    OP_DumpName = 217;
    OP_SafeFallSuccess = 218;
    OP_Heartbeat = 219;
    OP_SafePoint = 220;
    OP_FindPersonRequest = 221;
    OP_LeadershipExpToggle = 222;
    OP_PurchaseLeadershipAA = 223;
    OP_BankerChange = 224;
    OP_SetTitle = 225;
    OP_RequestTitles = 226;
    OP_ItemVerifyRequest = 227;
    OP_ClearObject = 228;
    OP_FinishTrade = 229;
    OP_GMEndTrainingResponse = 230;
    OP_LootComplete = 231;
    OP_WorldObjectsSent = 232;
    OP_FinishWindow = 233;
    OP_FinishWindow2 = 234;
    OP_ItemPacket = 235;
    OP_ColoredText = 236;
    OP_ItemRecastDelay = 237;
    OP_FormattedMessage = 238;
    OP_GuildMemberList = 239;
    OP_InterruptCast = 240;
    OP_ItemLinkResponse = 241;
    OP_ZoneSpawns = 242;
    OP_CompletedTasks = 243;
    OP_CharInventory = 244;
    OP_CustomTitles = 245;
    OP_SpawnDoor = 246;
    OP_SendZonepoints = 247;
    OP_TributeInfo = 248;
    OP_GuildTributeInfo = 249;
    OP_SendTitleList = 250;
    OP_AAExpUpdate = 251;
    OP_Action = 252;
    OP_AdventureData = 253;
    OP_AdventureFinish = 254;
    OP_AdventurePointsUpdate = 255;
    OP_Animation = 256;
    OP_AnnoyingZoneUnknown = 257;
    OP_BecomeTrader = 258;
    OP_BeginCast = 259;
    OP_Charm = 260;
    OP_CameraEffect = 261;
    OP_ConsentResponse = 262;
    OP_EnduranceUpdate = 263;
    OP_ExpUpdate = 264;
    OP_GroundSpawn = 265;
    OP_GroupUpdate = 266;
    OP_GuildMOTD = 267;
    OP_GuildManageAdd = 268;
    OP_GuildManageRemove = 269;
    OP_GuildManageStatus = 270;
    OP_GuildMemberUpdate = 271;
    OP_HPUpdate = 272;
    OP_IncreaseStats = 273;
    OP_ItemVerifyReply = 274;
    OP_LFGAppearance = 275;
    OP_LeadershipExpUpdate = 276;
    OP_LevelAppearance = 277;
    OP_LevelUpdate = 278;
    OP_ManaUpdate = 279;
    OP_MobEnduranceUpdate = 280;
    OP_MobHealth = 281;
    OP_MobManaUpdate = 282;
    OP_MobRename = 283;
    OP_MoneyOnCorpse = 284;
    OP_MoneyUpdate = 285;
    OP_MoveDoor = 286;
    OP_NewSpawn = 287;
    OP_NewZone = 288;
    OP_PetitionUpdate = 289;
    OP_PlayerProfile = 290;
    OP_RaidUpdate = 291;
    OP_RandomReply = 292;
    OP_RecipeReply = 293;
    OP_RequestClientZoneChange = 294;
    OP_RespondAA = 295;
    OP_RezzRequest = 296;
    OP_SetTitleReply = 297;
    OP_ShopDelItem = 298;
    OP_SimpleMessage = 299;
    OP_SkillUpdate = 300;
    OP_SomeItemPacketMaybe = 301;
    OP_SpellEffect = 302;
    OP_Stamina = 303;
    OP_Stun = 304;
    OP_TargetReject = 305;
    OP_TimeOfDay = 306;
    OP_TradeCoins = 307;
    OP_TradeMoneyUpdate = 308;
    OP_TraderDelItem = 309;
    OP_TraderItemUpdate = 310;
    OP_TributeTimer = 311;
    OP_UpdateLeadershipAA = 312;
    OP_Weather = 313;
    OP_ZoneChange = 314;
    OP_ZoneInUnknown = 315;
    OP_AcceptNewTask = 316;
    OP_AdventureInfo = 317;
    OP_ApplyPoison = 318;
    OP_ApproveWorld = 319;
    OP_Bandolier = 320;
    OP_BazaarSearch = 321;
    OP_BecomeCorpse = 322;
    OP_CancelTask = 323;
    OP_Command = 324;
    OP_DynamicWall = 325;
    OP_LFGuild = 326;
    OP_LoadSpellSet = 327;
    OP_LogServer = 328;
    OP_MOTD = 329;
    OP_OnLevelMessage = 330;
    OP_PlayMP3 = 331;
    OP_PotionBelt = 332;
    OP_PVPStats = 333;
    OP_Report = 334;
    OP_SpecialMesg = 335;
    OP_TaskActivity = 336;
    OP_TaskDescription = 337;
    OP_ZoneUnavail = 338;
    OP_ExploreUnknown = 339;
    OP_0x0193 = 340;
    OP_0x0347 = 341;
    OP_Action2 = 342;
    OP_AddNimbusEffect = 343;
    OP_AdventureDetails = 344;
    OP_AdventureLeaderboardReply = 345;
    OP_AdventureLeaderboardRequest = 346;
    OP_AdventureMerchantResponse = 347;
    OP_AdventureMerchantSell = 348;
    OP_AdventureStatsReply = 349;
    OP_AdventureStatsRequest = 350;
    OP_AdventureUpdate = 351;
    OP_AggroMeterLockTarget = 352;
    OP_AggroMeterTargetInfo = 353;
    OP_AggroMeterUpdate = 354;
    OP_AltCurrency = 355;
    OP_AltCurrencyMerchantReply = 356;
    OP_AltCurrencyMerchantRequest = 357;
    OP_AltCurrencyPurchase = 358;
    OP_AltCurrencyReclaim = 359;
    OP_AltCurrencySell = 360;
    OP_AltCurrencySellSelection = 361;
    OP_AssistGroup = 362;
    OP_AugmentInfo = 363;
    OP_AutoFire = 364;
    OP_Barter = 365;
    OP_BlockedBuffs = 366;
    OP_BookButton = 367;
    OP_BuffCreate = 368;
    OP_BuffRemoveRequest = 369;
    OP_CancelSneakHide = 370;
    OP_CashReward = 371;
    OP_ChangeSize = 372;
    OP_CharacterCreateRequest = 373;
    OP_ChatMessage = 374;
    OP_ClearAA = 375;
    OP_ClearBlockedBuffs = 376;
    OP_ClearLeadershipAbilities = 377;
    OP_ClearNPCMarks = 378;
    OP_ClearSurname = 379;
    OP_ClientTimeStamp = 380;
    OP_CloseTributeMaster = 381;
    OP_CorpseDrag = 382;
    OP_CorpseDrop = 383;
    OP_CrystalCountUpdate = 384;
    OP_CrystalCreate = 385;
    OP_CrystalReclaim = 386;
    OP_DelegateAbility = 387;
    OP_DeleteCharge = 388;
    OP_DeletePetition = 389;
    OP_DenyResponse = 390;
    OP_Disarm = 391;
    OP_DisciplineTimer = 392;
    OP_DisciplineUpdate = 393;
    OP_DiscordMerchantInventory = 394;
    OP_DoGroupLeadershipAbility = 395;
    OP_DzAddPlayer = 396;
    OP_DzChooseZone = 397;
    OP_DzChooseZoneReply = 398;
    OP_DzCompass = 399;
    OP_DzExpeditionEndsWarning = 400;
    OP_DzExpeditionInfo = 401;
    OP_DzExpeditionInvite = 402;
    OP_DzExpeditionInviteResponse = 403;
    OP_DzExpeditionLockoutTimers = 404;
    OP_DzListTimers = 405;
    OP_DzMakeLeader = 406;
    OP_DzMemberList = 407;
    OP_DzMemberListName = 408;
    OP_DzMemberListStatus = 409;
    OP_DzPlayerList = 410;
    OP_DzQuit = 411;
    OP_DzRemovePlayer = 412;
    OP_DzSetLeaderName = 413;
    OP_DzSwapPlayer = 414;
    OP_EnterChat = 415;
    OP_Feedback = 416;
    OP_FellowshipUpdate = 417;
    OP_FindPersonReply = 418;
    OP_Fling = 419;
    OP_FloatListThing = 420;
    OP_ForceFindPerson = 421;
    OP_FriendsWho = 422;
    OP_GetGuildMOTD = 423;
    OP_GetGuildMOTDReply = 424;
    OP_GiveMoney = 425;
    OP_GMApproval = 426;
    OP_GMTrainSkillConfirm = 427;
    OP_GroupDisbandOther = 428;
    OP_GroupDisbandYou = 429;
    OP_GroupLeaderChange = 430;
    OP_GroupLeadershipAAUpdate = 431;
    OP_GroupMakeLeader = 432;
    OP_GroupMentor = 433;
    OP_GroupRoles = 434;
    OP_GroupUpdateB = 435;
    OP_GroupUpdateLeaderAA = 436;
    OP_GuildBank = 437;
    OP_GuildBankItemList = 438;
    OP_GuildCreate = 439;
    OP_GuildManageBanker = 440;
    OP_GuildMemberLevelUpdate = 441;
    OP_GuildPromote = 442;
    OP_GuildStatus = 443;
    OP_GuildUpdateURLAndChannel = 444;
    OP_HideCorpse = 445;
    OP_InitialHPUpdate = 446;
    OP_InitialMobHealth = 447;
    OP_InspectBuffs = 448;
    OP_InspectMessageUpdate = 449;
    OP_ItemLinkText = 450;
    OP_ItemPreview = 451;
    OP_ItemViewUnknown = 452;
    OP_KeyRing = 453;
    OP_KickPlayers = 454;
    OP_KnowledgeBase = 455;
    OP_LDoNDisarmTraps = 456;
    OP_LDoNInspect = 457;
    OP_LDoNOpen = 458;
    OP_LDoNPickLock = 459;
    OP_LDoNSenseTraps = 460;
    OP_LFGGetMatchesRequest = 461;
    OP_LFGGetMatchesResponse = 462;
    OP_LFGResponse = 463;
    OP_LFPCommand = 464;
    OP_LFPGetMatchesRequest = 465;
    OP_LFPGetMatchesResponse = 466;
    OP_LinkedReuse = 467;
    OP_LocInfo = 468;
    OP_LockoutTimerInfo = 469;
    OP_Login = 470;
    OP_LoginComplete = 471;
    OP_LoginExpansionPacketData = 472;
    OP_LoginUnknown1 = 473;
    OP_LoginUnknown2 = 474;
    OP_LogoutReply = 475;
    OP_MarkNPC = 476;
    OP_MarkRaidNPC = 477;
    OP_Marquee = 478;
    OP_MendHPUpdate = 479;
    OP_MercenaryAssign = 480;
    OP_MercenaryCommand = 481;
    OP_MercenaryDataRequest = 482;
    OP_MercenaryDataResponse = 483;
    OP_MercenaryDataUpdate = 484;
    OP_MercenaryDataUpdateRequest = 485;
    OP_MercenaryDismiss = 486;
    OP_MercenaryHire = 487;
    OP_MercenarySuspendRequest = 488;
    OP_MercenarySuspendResponse = 489;
    OP_MercenaryTimer = 490;
    OP_MercenaryTimerRequest = 491;
    OP_MercenaryUnknown1 = 492;
    OP_MercenaryUnsuspendResponse = 493;
    OP_MobUpdate = 494;
    OP_MoveMultipleItems = 495;
    OP_MoveLogDisregard = 496;
    OP_MoveLogRequest = 497;
    OP_MultiLineMsg = 498;
    OP_NewTitlesAvailable = 499;
    OP_OpenContainer = 500;
    OP_OpenDiscordMerchant = 501;
    OP_OpenInventory = 502;
    OP_PetBuffWindow = 503;
    OP_PetCommandState = 504;
    OP_PetHoTT = 505;
    OP_PetitionCheckout2 = 506;
    OP_PetitionSearch = 507;
    OP_PetitionSearchResults = 508;
    OP_PetitionSearchText = 509;
    OP_PlayerStateAdd = 510;
    OP_PlayerStateRemove = 511;
    OP_Poll = 512;
    OP_PollResponse = 513;
    OP_PopupResponse = 514;
    OP_PreLogoutReply = 515;
    OP_PVPLeaderBoardDetailsReply = 516;
    OP_PVPLeaderBoardDetailsRequest = 517;
    OP_PVPLeaderBoardReply = 518;
    OP_PVPLeaderBoardRequest = 519;
    OP_QueryResponseThing = 520;
    OP_QueryUCSServerStatus = 521;
    OP_RaidDelegateAbility = 522;
    OP_RaidClearNPCMarks = 523;
    OP_RaidInvite = 524;
    OP_RaidJoin = 525;
    OP_RandomNameGenerator = 526;
    OP_ReclaimCrystals = 527;
    OP_RemoveAllDoors = 528;
    OP_RemoveBlockedBuffs = 529;
    OP_RemoveNimbusEffect = 530;
    OP_RemoveTrap = 531;
    OP_RequestKnowledgeBase = 532;
    OP_RespawnWindow = 533;
    OP_RestState = 534;
    OP_Rewind = 535;
    OP_RezzComplete = 536;
    OP_Sacrifice = 537;
    OP_SendFindableNPCs = 538;
    OP_SendSystemStats = 539;
    OP_SessionReady = 540;
    OP_SetChatServer = 541;
    OP_SetChatServer2 = 542;
    OP_SetFace = 543;
    OP_SetGroupTarget = 544;
    OP_SetGuildRank = 545;
    OP_SetStartCity = 546;
    OP_SharedTaskMemberList = 547;
    OP_SharedTaskAddPlayer = 548;
    OP_SharedTaskRemovePlayer = 549;
    OP_SharedTaskMakeLeader = 550;
    OP_SharedTaskMemberInvite = 551;
    OP_SharedTaskInvite = 552;
    OP_SharedTaskInviteResponse = 553;
    OP_SharedTaskAcceptNew = 554;
    OP_SharedTaskMemberChange = 555;
    OP_SharedTaskPlayerList = 556;
    OP_SharedTaskSelectWindow = 557;
    OP_SharedTaskQuit = 558;
    OP_TaskTimers = 559;
    OP_ShopEndConfirm = 560;
    OP_ShopItem = 561;
    OP_Some3ByteHPUpdate = 562;
    OP_Some6ByteHPUpdate = 563;
    OP_Sound = 564;
    OP_SpawnPositionUpdate = 565;
    OP_TargetBuffs = 566;
    OP_TargetHoTT = 567;
    OP_TaskActivityComplete = 568;
    OP_TaskHistoryReply = 569;
    OP_TaskHistoryRequest = 570;
    OP_TaskRequestTimer = 571;
    OP_TaskSelectWindow = 572;
    OP_Translocate = 573;
    OP_TributePointUpdate = 574;
    OP_Untargetable = 575;
    OP_UpdateAA = 576;
    OP_UpdateAura = 577;
    OP_VetClaimReply = 578;
    OP_VetClaimRequest = 579;
    OP_VetRewardsAvaliable = 580;
    OP_VoiceMacroIn = 581;
    OP_VoiceMacroOut = 582;
    OP_WeaponEquip1 = 583;
    OP_Weblink = 584;
    OP_WhoAllResponse = 585;
    OP_World_Client_CRC1 = 586;
    OP_World_Client_CRC2 = 587;
    OP_World_Client_CRC3 = 588;
    OP_WorldClientReady = 589;
    OP_WorldComplete = 590;
    OP_WorldLogout = 591;
    OP_WorldUnknown001 = 592;
    OP_XTargetAutoAddHaters = 593;
    OP_XTargetOpen = 594;
    OP_XTargetOpenResponse = 595;
    OP_XTargetRequest = 596;
    OP_XTargetResponse = 597;
    OP_ZoneComplete = 598;
    OP_ZoneGuildList = 599;
    OP_ZonePlayerToBind = 600;
    OP_ZoneServerReady = 601;
    OP_ResetAA = 602;
    OP_UnderWorld = 603;

    ////////////////////
    // Nested Structs //
    ////////////////////

    // World
    Nested_WorldServer = 1000;
    Nested_CharacterSelectEntry = 1001;
    Nested_CharSelectEquip = 1002;
    Nested_Tint = 1003;
    Nested_StringList = 1004;
}
