syntax = "proto3";
package eq.player;

option go_package = "knervous/eqgo/internal/api/proto/player";

import "item/item.proto";
import "common/common.proto";

message Tint {
int32 blue = 1;
int32 green = 2;
int32 red = 3;
int32 use_tint = 4;
}

message CharSelectEquip
{
int32 material = 1;
Tint color = 2;
};

message CharacterSelectEntry
{
string name = 1;
int32 char_class = 2;
int32 race = 3;
int32 level = 4;
int32 zone = 5;
int32 instance = 6;
int32 gender = 7;
int32 face = 8;
repeated eq.item.ItemInstance items = 9;
int32 deity = 10;
int32 primary_id_file = 11;
int32 secondary_id_file = 12;
int32 go_home = 13;
int32 enabled = 14;
int32 last_login = 15;
};


message CharacterSelect
{
    int32 character_count = 1;
    repeated CharacterSelectEntry characters = 2;
};


message PlayerProfile {
int32 checksum = 1;
int32 gender = 2;
int32 race = 3;
int32 char_class = 4;
int32 level = 5;
int32 level1 = 6;
repeated eq.common.Bind binds = 7;
int32 deity = 8;
int32 intoxication = 9;
repeated int32 spell_slot_refresh = 10;
int32 ability_slot_refresh = 11;
int32 haircolor = 12;
int32 beardcolor = 13;
int32 eyecolor1 = 14;
int32 eyecolor2 = 15;
int32 hairstyle = 16;
int32 beard = 17;
eq.common.TextureProfile item_material = 18;
int32 item_tint = 19;
repeated eq.common.AA_Array aa_array = 20;
int32 points = 21;
int32 mana = 22;
int32 cur_hp = 23;
int32 str = 24;
int32 sta = 25;
int32 cha = 26;
int32 dex = 27;
int32 intel = 28;
int32 agi = 29;
int32 wis = 30;
int32 face = 31;
repeated int32 spell_book = 32;
repeated int32 mem_spells = 33;
int32 platinum = 34;
int32 gold = 35;
int32 silver = 36;
int32 copper = 37;
int32 platinum_cursor = 38;
int32 gold_cursor = 39;
int32 silver_cursor = 40;
int32 copper_cursor = 41;
repeated int32 skills = 42;
repeated int32 innate_skills = 43;
int32 toxicity = 44;
int32 thirst_level = 45;
int32 hunger_level = 46;
repeated eq.common.SpellBuff buffs = 47;
eq.common.Disciplines disciplines = 48;
repeated int32 recast_timers = 49;
int32 endurance = 50;
int32 aapoints_spent = 51;
int32 aapoints = 52;
repeated eq.common.Bandolier bandoliers = 53;
eq.common.PotionBelt potionbelt = 54;
int32 available_slots = 55;
string name = 56;
string last_name = 57;
int32 guild_id = 58;
int32 birthday = 59;
int32 lastlogin = 60;
int32 time_played_min = 61;
int32 pvp = 62;
int32 anon = 63;
int32 gm = 64;
int32 guildrank = 65;
int32 guildbanker = 66;
int32 exp = 67;
int32 timeentitledonaccount = 68;
repeated int32 languages = 69;
float x = 70;
float y = 71;
float z = 72;
float heading = 73;
int32 platinum_bank = 74;
int32 gold_bank = 75;
int32 silver_bank = 76;
int32 copper_bank = 77;
int32 platinum_shared = 78;
int32 expansions = 79;
int32 autosplit = 80;
int32 zone_id = 81;
int32 zone_instance = 82;
repeated eq.common.StringList group_members = 83;
string group_leader = 84;
int32 entityid = 85;
int32 lead_aa_active = 86;
int32 ldon_points_guk = 87;
int32 ldon_points_mir = 88;
int32 ldon_points_mmc = 89;
int32 ldon_points_ruj = 90;
int32 ldon_points_tak = 91;
int32 ldon_points_available = 92;
int32 tribute_time_remaining = 93;
int32 career_tribute_points = 94;
int32 tribute_points = 95;
int32 tribute_active = 96;
repeated eq.common.Tribute tributes = 97;
double group_leadership_exp = 98;
double raid_leadership_exp = 99;
int32 group_leadership_points = 100;
int32 raid_leadership_points = 101;
eq.common.LeadershipAA leader_abilities = 102;
int32 air_remaining = 103;
int32 pvp_kills = 104;
int32 pvp_deaths = 105;
int32 pvp_current_points = 106;
int32 pvp_career_points = 107;
int32 pvp_best_kill_streak = 108;
int32 pvp_worst_death_streak = 109;
int32 pvp_current_kill_streak = 110;
eq.common.PVPStatsEntry pvp_last_kill = 111;
eq.common.PVPStatsEntry pvp_last_death = 112;
int32 pvp_number_of_kills_in_last__hours = 113;
repeated eq.common.PVPStatsEntry pvp_recent_kills = 114;
int32 exp_aa = 115;
int32 current_rad_crystals = 116;
int32 career_rad_crystals = 117;
int32 current_ebon_crystals = 118;
int32 career_ebon_crystals = 119;
int32 group_autoconsent = 120;
int32 raid_autoconsent = 121;
int32 guild_autoconsent = 122;
int32 level3 = 123;
int32 showhelm = 124;
repeated eq.item.ItemInstance inventory_items = 126;
}